# demo-apm-python

./: .gitignore
aws-lambda/: handler.py
basic/: app.py  requirements.txt
django/: requirements.txt  setup.py
django/gunicorn/: Dockerfile  requirements.txt
django/gunicorn/demo/: middleware.py  requirements.txt  settings.py  urls.py  views.py
django/simple/: Dockerfile  requirements.txt
elastic/: requirements.txt
fastapi/uvicorn/: Dockerfile  README.md  api_test_data.txt  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt
fastapi/uvicorn/routers/: items.py  orders.py  users.py
flask/: Dockerfile  api_test_data.txt  app.py  docker-compose.yaml  generate-requirements.txt  requirements.txt  test.py
flask/testenv/: pyvenv.cfg
flask/utils/: data_processor.py
gcp/: function.py  gcr_function.py  requirements.txt
terraform/google_cloud_run/: main.tf
